0.9.0 (currently working on)
- [#3353] Fix: Selected payment method not listed on the confirmation page
- [#3229] Change: Polish some labels in the registration process
- [#3350] Fix: getPreselectedPaymentMethod does not return UID of selected payment method
- [#3144] Fix: Increase the max input size for showRegistrationFields
- [#3327] Fix: Front-end editing: after creating an auxiliary record clicking on "edit" for a previously existing auxiliary record has no effect
- [#3311] Feature: Allow editing of existing speakers records in the FE editor
- [#3317] Fix: Check for object comparisons / recursive nesting
- [#3339] Feature: Add setNotes()/getNotes() to tx_seminars_Model_Speaker
- [#3323] Change: Change all getNewGhost/set* sequences to getLoadedTestingModel in seminars
- [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
- [#3319] Change: Use only LF in the e-mail body
- [#3314] Feature: Allow editing of existing target group records in the FE editor
- [#3313] Feature: Allow editing of existing checkbox records in the FE editor
- [#3316] Fix: Error in Unit Test populateListPlacesShowsPlaceWithOwnerIsLoggedInFrontEndUser
- [#3315] Fix: Fix the position of the "Edit" buttons in the FE editor
- [#3303] Fix: The registration cannot be submitted in Safari and Chrome
- [#3093] Feature: Allow editing of existing place records in the FE editor
- [#3289] Feature: Limit the list view to events with vacancies
- [#3288] Feature: Add a flexforms checkbox for the list view to show only events that have vacancies
- [#3287] Feature: Add a function to the seminar bag builder to only show events that have vacancies
- [#3301] Change: Model_Place::setCountry should also accept null
- [#3304] Fix: Crash on registration if a place has an invalid country
- [#3290] Fix: Changes to the "myself" checkbox are registered only when the checkbox loses the focus in IE
- [#3233] Feature: Add a modal editor for target groups